argocd/apps/podinfo/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: podinfo
spec:
  hostnames:
    - podinfo.civilsnut.se
  parentRefs:
    - name: shared-gateway
      namespace: shared-gateway
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: []
